# ansible_dev

./: Notes.md  Notes_collection.md  ansible.cfg  community_collection.txt  pyproject.toml  testmod.yml  testuserinfo.yml
.devcontainer/: DockerFile  devcontainer.json  docker-compose.yml
callback_plugins/: custom_logger.py
collections/ansible_collections/mac/test/: README.md  galaxy.yml
collections/ansible_collections/mac/test/plugins/filter/: custom_filter.py
facts_check/: facts.yaml  service_facts.yaml  service_facts2.yaml
iac_terraform/: Notes_Terraform.md  README.md  manage_terraform.yaml  manage_terraform_validate.yaml  terraform_install.yml
iac_terraform/terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
inventory/: hosts
playbooks/: test_filter.yml  testrole.yml
roles/base/meta/: main.yml
roles/base/tasks/: main.yml
services/: service_check.yaml
