[tool.poetry]
name = "ansible-tuts"
version = "0.1.0"
description = ""
authors = ["jatin"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
ansible-core = ">=2.20.2,<3.0.0"
ansible-lint = "^26.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
